[project]
name = "uiuc-ae598-sr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikihisa Yuasa", email = "myuasa2@illinois.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
